--- a/src/assets/components/header/header.html
+++ b/src/assets/components/header/header.html
@@ -1,1 +1,29 @@
-<header class="header"></header>
+<header class="header">
+	<div class="header__container container flex ai-fs jc-sb">
+		<a href="#" class="header__logo">
+			<img src="assets/img/logo.svg" alt="Лого">
+		</a>
+
+		<div class="header__wrapp flex ai-c jc-fe">
+			<button class="header__burger  ">
+				<span class="header__burger-line">
+				</span>
+			</button>
+			<ul data-adapt-block=".page ,992.98, first" class="header__wrapp-list flex ai-c jc-fe">
+				<li class="header__wrapp-inner">
+					<a href="#" class="header__link link">
+						Контакты
+					</a>
+				</li>
+				<li class="header__wrapp-inner">
+					<a href="#" class="header__btn btn-br">
+						Забрать баллы НМО
+					</a>
+				</li>
+			</ul>
+			<a href="#" class="header__button btn">
+				Личный кабинет
+			</a>
+		</div>
+	</div>
+</header>
