--- a/src/assets/scss/utils/mixin.scss
+++ b/src/assets/scss/utils/mixin.scss
@@ -106,7 +106,7 @@ $mobile-355: "max-width: #{rem(355.98)}";
 
 /*состояния наведения*/
 @mixin interactive-states($property, $hover-value, $focus-value: null, $active-value: null) {
-	transition: var(--hover-trans);
+	transition: $hover-trans;
 	outline: none;
 
 	@media (hover: hover) {
@@ -190,4 +190,111 @@ $max- максимальный размер шрифта
 	width: rem(6);
 	border-radius: rem(14);
 
+}
+
+
+@mixin burger {
+	width: var(--burger-width);
+	height: var(--burger-height);
+	position: relative;
+	background: var(--sky-blue);
+	border: rem(1) solid var(--sky-blue);
+	color: var(--white);
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-shrink: 0;
+	border-radius: rem(70);
+
+
+	&-line {
+		border-radius: rem(2);
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+		width: var(--burger-line-width);
+		height: var(--burger-line-height);
+		background-color: var(--burger-color);
+		transition: transform $hover-trans ease-in-out;
+	}
+
+	&::before,
+	&::after {
+		content: "";
+		position: absolute;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: var(--burger-line-width);
+		height: var(--burger-line-height);
+		background-color: var(--burger-color);
+		transition: transform $hover-trans ease-in-out, top $hover-trans ease-in-out;
+		border-radius: rem(2);
+	}
+
+	&::before {
+		top: rem(10);
+	}
+
+	&::after {
+		top: calc(100% - rem(10));
+	}
+
+	&.-is-active {
+		.header__burger-line {
+			transform: scale(0);
+			transition: transform $hover-trans ease-in-out;
+		}
+
+		&::before {
+			transform: translate(-50%, -50%) rotate(45deg);
+			top: 50%;
+			transition: transform $hover-trans ease-in-out, top $hover-trans ease-in-out;
+		}
+
+		&::after {
+			transform: translate(-50%, -50%) rotate(-45deg);
+			top: 50%;
+			transition: transform $hover-trans ease-in-out, top $hover-trans ease-in-out;
+		}
+	}
+
+
+
+	@media (hover: hover) {
+		&:hover {
+
+			.header__burger-line,
+			&::after,
+			&::before {
+				background: var(--sky-blue);
+			}
+
+			background: var(--black-0);
+
+		}
+	}
+
+	&:focus-visible {
+
+		.header__burger-line,
+		&::after,
+		&::before {
+			background: var(--sky-blue);
+		}
+
+		background: var(--black-0);
+	}
+
+	&:active {
+
+		.header__burger-line,
+		&::after,
+		&::before {
+			background: var(--sky-blue);
+		}
+
+		background: var(--black-0);
+	}
 }
