--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -22,3 +22,8 @@
 
 // page
 @import "../scss/pages/index/main.scss";
+@import "../scss/pages/index/slogan.scss";
+@import "../scss/pages/index/materials.scss";
+@import "../scss/pages/index/news.scss";
+@import "../scss/pages/index/become.scss";
+@import "../scss/pages/index/partners.scss";
