--- a/src/assets/components/footer/footer.html
+++ b/src/assets/components/footer/footer.html
@@ -1,1 +1,22 @@
-<footer class="footer"></footer>
+<footer class="footer">
+	<div class="container footer__container ">
+		<div class="footer__header">
+
+		</div>
+		<div class="footer__bottom">
+
+		</div>
+		<ul class="footer__link-list">
+			<li class="footer__link-inner">
+				<a href="#" target="_blank" class="footer__link">
+					Политика конфиденциальности
+				</a>
+			</li>
+			<li class="footer__link-inner">
+				<a href="#" target="_blank" class="footer__link">
+					Политика обработки персональных данных
+				</a>
+			</li>
+		</ul>
+	</div>
+</footer>
