--- a/src/assets/scss/variables/variables.scss
+++ b/src/assets/scss/variables/variables.scss
@@ -25,12 +25,14 @@
 	--blue-dark-gradient: linear-gradient(180deg, #3C4677 22.02%, #6383C7 72.71%);
 	--blue-dark-gradient-15deg: linear-gradient(-15deg, #6383C7 22.02%, #3C4677 95.75%);
 	--bluce-dark-gradien-72: linear-gradient(180deg, #6383C722.02%, #3C4677 72.71%);
+	--line-gradient: linear-gradient(99.53deg, #6383C7 23.8%, #3C4677 118.93%);
 	/*shadow*/
 	--shadow-inset: inset 0px 4px 15px 6px rgba(0, 0, 0, 0.25);
 	--shadow: 0px 4px 5px 1px rgba(0, 0, 0, 0.25);
 	--shadow-2: -12px 4px 14px rgba(0, 0, 0, 0.25);
 	--shadow-3: -17px 4px 14px rgba(0, 0, 0, 0.25);
 	--shadow-4: 6px 6px 4px rgba(0, 0, 0, 0.25);
+	--shadow-5: 4px 6px 4px rgba(0, 0, 0, 0.25);
 	--hover-trans: .4s --hover-trans:.4s;
 
 
