--- a/src/assets/scss/variables/variables.scss
+++ b/src/assets/scss/variables/variables.scss
@@ -33,9 +33,7 @@
 	--shadow-3: -17px 4px 14px rgba(0, 0, 0, 0.25);
 	--shadow-4: 6px 6px 4px rgba(0, 0, 0, 0.25);
 	--shadow-5: 4px 6px 4px rgba(0, 0, 0, 0.25);
-	--hover-trans: .4s --hover-trans:.4s;
-
-
+	--hover-trans: .4s;
 	--z-index-0: 0;
 	--z-index-1: 1;
 	--z-index-2: 2;
