--- a/src/assets/components/footer/footer.html
+++ b/src/assets/components/footer/footer.html
@@ -1,19 +1,43 @@
 <footer class="footer">
 	<div class="container footer__container ">
 		<div class="footer__header">
-
+			<a href="#" class="footer__header-logo">
+				<img src="assets/img/logo.svg" alt="Лого">
+			</a>
+			<p class="footer__header-text">
+				© 2025 МОиР
+			</p>
 		</div>
-		<div class="footer__bottom">
-
+		<div class="footer__social">
+			<ul class="footer__social-list flex ai-c jc-fe">
+				<li class="footer__social-inner">
+					<a href="#" target="_blank" class="footer__social-btn">
+						<img src="assets/img/icons/telegramm.svg" alt="телеграмм">
+					</a>
+				</li>
+				<li class="footer__social-inner">
+					<a href="#" target="_blank" class="footer__social-btn">
+						<img src="assets/img/icons/vk.svg" alt="вк">
+					</a>
+				</li>
+				<li class="footer__social-inner">
+					<a href="#" target="_blank" class="footer__social-btn">
+						<img src="assets/img/icons/max.svg" alt="макс">
+					</a>
+				</li>
+			</ul>
+			<a href="#" class="footer__social-link">
+				«Главный врач – Онлайн»
+			</a>
 		</div>
-		<ul class="footer__link-list">
-			<li class="footer__link-inner">
-				<a href="#" target="_blank" class="footer__link">
+		<ul class="footer__policy">
+			<li class="footer__policy-inner">
+				<a href="#" target="_blank" class="footer__policy-link">
 					Политика конфиденциальности
 				</a>
 			</li>
-			<li class="footer__link-inner">
-				<a href="#" target="_blank" class="footer__link">
+			<li class="footer__policy-inner">
+				<a href="#" target="_blank" class="footer__policy-link">
 					Политика обработки персональных данных
 				</a>
 			</li>
