--- a/src/assets/components/footer/footer.scss
+++ b/src/assets/components/footer/footer.scss
@@ -1,6 +1,141 @@
 .footer {
+	padding-top: rem(24);
+	padding-bottom: rem(40);
+
+	box-shadow: var(--shadwo-top);
+	background: var(--white);
+	border-top: rem(2) solid var(--sky-blue);
+
 	&__container {
 		display: grid;
-		grid-template-columns: auto 1fr auto;
+		grid-template-columns: auto auto auto;
+		justify-content: space-between;
+		align-items: flex-end;
+
+		padding-right: rem(50);
+
+		@include mw1240 {
+			padding-right: rem(10);
+		}
+
+		@include mw767 {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			gap: rem(20);
+		}
+	}
+
+	&__policy {
+		grid-column: 2/3;
+		grid-row: 1/2;
+		display: flex;
+		flex-direction: column;
+
+		gap: rem(3);
+
+		@include mw767 {
+			margin-top: rem(10);
+		}
+
+		&-link {
+			display: block;
+			font-style: normal;
+			font-weight: 400;
+			font-size: rem(12);
+			line-height: rem(16);
+			text-align: center;
+			text-decoration: underline;
+
+			color: var(--gray-medium);
+
+			@include interactive-states(color, var(--sky-blue), var(--sky-blue), var(--sky-blue));
+			@include interactive-states(text-decoration, none, none, none);
+
+		}
+
+	}
+
+	&__header {
+		&-logo {
+			width: rem(166);
+			display: block;
+
+			img,
+			svg {
+				width: 100%;
+				object-fit: contain;
+			}
+		}
+
+		&-text {
+			font-style: normal;
+			font-weight: 400;
+			font-size: rem(12);
+			line-height: rem(16);
+			color: var(--sky-blue);
+
+			@include mw767 {
+				text-align: center;
+			}
+		}
+	}
+
+	&__social {
+		display: flex;
+		flex-direction: column;
+		gap: rem(23);
+
+		@include mw767 {
+			padding-top: rem(22);
+			max-width: rem(230);
+			width: 100%;
+			margin-left: auto;
+			margin-right: auto;
+			border-top: rem(2) solid var(--light-gray);
+			gap: rem(20);
+		}
+
+		&-list {
+			gap: rem(16);
+
+			@include mw767 {
+				justify-content: center;
+			}
+		}
+
+		&-btn {
+			@include imgBox(rem(30), rem(30));
+			border-radius: 50%;
+			background: var(--blue);
+
+			img,
+			svg {
+				width: 60%;
+				height: 60%;
+				object-fit: contain;
+			}
+
+			@include interactive-states(background, var(--sky-blue), var(--sky-blue), var(--sky-blue));
+		}
+
+		&-link {
+			display: block;
+			font-style: normal;
+			font-weight: 700;
+			font-size: 12px;
+			line-height: 16px;
+			text-align: left;
+			text-decoration-line: underline;
+			text-transform: uppercase;
+
+			color: var(--sky-blue);
+			@include interactive-states(color, var(--sky-blue), var(--sky-blue), var(--sky-blue));
+			@include interactive-states(text-decoration, none, none, none);
+
+			@include mw767 {
+				text-align: center;
+			}
+		}
 	}
 }
