--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -17,9 +17,14 @@
 @import "../components/components.scss";
 
 // page
-@import "../scss/pages/index/main.scss";
-@import "../scss/pages/index/slogan.scss";
-@import "../scss/pages/index/materials.scss";
-@import "../scss/pages/index/news.scss";
-@import "../scss/pages/index/become.scss";
-@import "../scss/pages/index/partners.scss";
+@import "../scss/pages/main.scss";
+@import "../scss/pages/slogan.scss";
+@import "../scss/pages/materials.scss";
+@import "../scss/pages/news.scss";
+@import "../scss/pages/become.scss";
+@import "../scss/pages/partners.scss";
+@import "../scss/pages/documents.scss";
+@import "../scss/pages/maps.scss";
+@import "../scss/pages/registration.scss";
+@import "../scss/pages/organizers.scss";
+@import "../scss/pages/boost.scss";
