--- a/src/assets/scss/variables/variables.scss
+++ b/src/assets/scss/variables/variables.scss
@@ -26,6 +26,7 @@
 	--blue-dark-gradient-15deg: linear-gradient(-15deg, #6383C7 22.02%, #3C4677 95.75%);
 	--bluce-dark-gradien-72: linear-gradient(180deg, #6383C722.02%, #3C4677 72.71%);
 	--line-gradient: linear-gradient(99.53deg, #6383C7 23.8%, #3C4677 118.93%);
+	--line-gradient-white: linear-gradient(258.52deg, #FFFFFF -1.98%, #EAEAEA 52.95%);
 	/*shadow*/
 	--shadow-inset: inset 0px 4px 15px 6px rgba(0, 0, 0, 0.25);
 	--shadow: 0px 4px 5px 1px rgba(0, 0, 0, 0.25);
@@ -33,6 +34,7 @@
 	--shadow-3: -17px 4px 14px rgba(0, 0, 0, 0.25);
 	--shadow-4: 6px 6px 4px rgba(0, 0, 0, 0.25);
 	--shadow-5: 4px 6px 4px rgba(0, 0, 0, 0.25);
+	--shadow-6: 17px 4px 13px rgba(0, 0, 0, 0.25);
 	--shadwo-top: 0px -5px 14px rgba(0, 0, 0, 0.25);
 	--hover-trans: .4s;
 	--z-index-0: 0;
