--- a/src/assets/scss/pages/organizers.scss
+++ b/src/assets/scss/pages/organizers.scss
@@ -2,7 +2,7 @@
 	padding-top: rem(55);
 
 	@include mw992 {
-		padding-top: rem(50);
+		padding-top: rem(44);
 	}
 
 	&__container {
@@ -19,6 +19,10 @@
 		&::after,
 		&::before {
 			width: calc(50% - rem(128));
+
+			@include mw992 {
+				width: calc(50% - rem(110));
+			}
 		}
 	}
 
@@ -31,6 +35,7 @@
 		padding-top: rem(37);
 
 		@include mw1240 {
+			padding-top: rem(25);
 			gap: rem(40);
 		}
 
