--- a/src/assets/scss/pages/slogan.scss
+++ b/src/assets/scss/pages/slogan.scss
@@ -25,12 +25,17 @@
 	}
 
 	&__event {
+		@include mw992 {
+			padding-bottom: rem(6);
+		}
 
 		&-title {
 			font-style: normal;
 			font-size: rem(20);
 
-
+			@include mw992 {
+				font-size: 19px;
+			}
 		}
 	}
 }
