--- a/src/assets/scss/pages/main.scss
+++ b/src/assets/scss/pages/main.scss
@@ -721,6 +721,10 @@
 	min-height: rem(861);
 	min-height: rem(770);
 
+	@include mw767 {
+		padding-bottom: rem(33);
+	}
+
 	&-nav {
 		padding-left: rem(196);
 
@@ -737,6 +741,13 @@
 
 			border-color: var(--navy-blue);
 			color: var(--navy-blue);
+
+			@media(max-width:rem(665.99)) {
+				border-color: var(--white);
+				color: var(--white);
+				fill: var(--white);
+			}
+
 			@include interactive-states(color, var(--white), var(--white), var(--white));
 			@include interactive-states(fill, var(--white), var(--white), var(--white));
 		}
@@ -786,8 +797,7 @@
 				left: rem(-1537);
 
 				@include mw767 {
-					left: rem(-1517);
-					transform: rotate(-31deg);
+					left: rem(-1740);
 				}
 			}
 
@@ -805,8 +815,7 @@
 			}
 
 			@include mw767 {
-				left: rem(-1400);
-				transform: rotate(-31deg);
+				left: rem(-1602);
 			}
 		}
 
@@ -817,12 +826,13 @@
 			@include mw992 {
 				top: rem(50);
 				left: 0;
-				width: rem(963);
+				width: rem(998);
 			}
 
 			@include mw767 {
-				top: rem(-86);
-				left: rem(-74);
+				width: rem(1080);
+				top: rem(-37);
+				left: rem(-231);
 			}
 		}
 
@@ -844,7 +854,7 @@
 
 	@include mw767 {
 		max-width: rem(425);
-		padding-top: rem(49);
+		padding-top: rem(426);
 	}
 
 	&-img {
@@ -857,7 +867,7 @@
 		}
 
 		@include mw767 {
-			width: rem(122);
+			width: rem(164);
 		}
 	}
 
@@ -871,8 +881,8 @@
 		color: var(--navy-blue);
 
 		@include mw767 {
-			font-size: rem(19);
-			max-width: rem(200);
+			font-size: rem(16);
+			padding-top: 5px;
 		}
 	}
 
@@ -887,8 +897,9 @@
 
 		@include mw767 {
 			font-size: rem(24);
-			line-height: 150%;
+			line-height: 138%;
 			max-width: rem(340);
+			padding-top: 0;
 		}
 	}
 
@@ -903,6 +914,7 @@
 
 			@include mw767 {
 				font-size: rem(20);
+				line-height: 110%;
 			}
 		}
 
@@ -915,7 +927,7 @@
 			color: var(--navy-blue);
 
 			@include mw767 {
-				font-size: rem(18);
+				font-size: rem(16);
 			}
 		}
 	}
@@ -938,9 +950,7 @@
 			object-fit: contain;
 			width: rem(42);
 
-			@include mw767 {
-				width: rem(25);
-			}
+
 		}
 	}
 
@@ -956,6 +966,11 @@
 
 		color: #FFFFFF;
 
+		@include mw767 {
+			margin-left: auto;
+			margin-right: auto;
+		}
+
 
 	}
 
@@ -968,13 +983,19 @@
 		padding-top: rem(23);
 		margin-top: rem(30);
 		border-top: rem(2) solid var(--navy-blue);
+
+		@include mw767 {
+			margin-top: rem(10);
+			padding-top: rem(15);
+			gap: rem(28);
+		}
 	}
 
 	&-wrapp {
 		padding-top: rem(64);
 
 		@include mw767 {
-			padding-top: rem(40);
+			padding-top: rem(27);
 		}
 	}
 }
