--- a/src/assets/scss/pages/registration.scss
+++ b/src/assets/scss/pages/registration.scss
@@ -5,7 +5,7 @@
 
 	@include mw992 {
 		padding-top: rem(50);
-		padding-bottom: rem(50);
+		padding-bottom: rem(39);
 	}
 
 	&__container {
@@ -39,8 +39,10 @@
 		padding-top: rem(48);
 
 		@include mw767 {
+			padding-top: rem(26);
 			display: flex;
 			flex-direction: column;
+			gap: rem(36);
 		}
 	}
 
@@ -54,7 +56,8 @@
 		gap: rem(12);
 
 		@include mw767 {
-			min-height: 0;
+			min-height: rem(280);
+			padding-left: rem(20);
 		}
 
 		&-title {
@@ -109,7 +112,9 @@
 		@include interactive-states(text-decoration, none, none, none);
 
 		@include mw992 {
-			grid-column: 1/3;
+			grid-column: 2/3;
+			grid-row: 1/2;
+			padding-top: rem(5);
 		}
 	}
 
@@ -119,6 +124,11 @@
 		font-size: rem(16);
 		line-height: rem(22);
 		color: var(--white);
+
+		@include mw992 {
+			grid-column: 1/3;
+			grid-row: 2/3;
+		}
 	}
 
 	&__time {
@@ -131,6 +141,10 @@
 			line-height: rem(22);
 			text-transform: uppercase;
 			color: var(--white);
+
+			@include mw992 {
+				padding-left: rem(6);
+			}
 		}
 
 		&-date {
@@ -173,8 +187,10 @@
 
 	&__list {
 		border-top: rem(1) solid var(--light-gray);
+		width: 100%;
 
 		&-inner {
+			width: 100%;
 			display: grid;
 			align-items: flex-start;
 			grid-template-columns: rem(114) 1fr auto;
@@ -187,7 +203,8 @@
 
 			@include mw992 {
 				grid-template-columns: rem(114) 1fr;
-
+				gap: rem(10);
+				padding-bottom: rem(36);
 			}
 
 
