--- a/src/assets/components/components.scss
+++ b/src/assets/components/components.scss
@@ -1,3 +1,6 @@
 @import "../components/button/button.scss";
 @import "../components/header/header.scss";
+@import "../components/header/header-moir.scss";
 @import "../components/footer/footer.scss";
+
+@import "../components/select/select.scss";
