--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -52,6 +52,16 @@ h3,
 
 }
 
+h4,
+.h4 {
+	font-style: normal;
+	font-weight: 700;
+	font-size: rem(18);
+	line-height: rem(24);
+	text-transform: uppercase;
+
+}
+
 
 p {
 	font-style: normal;
