--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -33,3 +33,5 @@
 @import "../scss/pages/nearest.scss";
 @import "../scss/pages/website.scss";
 @import "../scss/pages/flagship.scss";
+@import "../scss/pages/about.scss";
+@import "../scss/pages/uncos.scss";
