--- a/src/assets/scss/variables/variables.scss
+++ b/src/assets/scss/variables/variables.scss
@@ -48,6 +48,7 @@
 	--shadwo-top: 0px -5px 14px rgba(0, 0, 0, 0.25);
 	--shadow-cart: 6px 8px 8px rgba(0, 0, 0, 0.25);
 	--shadow-back: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	--shadow-cart-2: 4px 8px 8px rgba(0, 0, 0, 0.25);
 	--hover-trans: .4s;
 	--z-index-0: 0;
 	--z-index-1: 1;
